# polytype

./: .gitignore  README.md  cabal.project  default.nix  polytype.cabal
app/: Brick.hs  CCOut  HtopDemo.hs  IRCBridge.hs  Main.hs  Main.hs.b  TestHtop.hs
src/: Polytype.hs
src/Polysemy/Input/: Streaming.hs
src/Polysemy/Output/: Streaming.hs
src/Polytype/: Ansi.hs  Asciinema.hs  Combinators.hs  Debug.hs  Delay.hs  Env.hs  Experiments.hs  Log.hs  Process.hs  Pty.hs  Race.hs  Readline.hs  Serial.hs  StdStreams.hs  Teletype.hs  Test.hs  Timeout.hs  Types.hs  Util.hs
src/Polytype/Examples/: Bash.hs  Echo.hs  HtopAsciinema.hs  IRCBridge.hs  Process.hs  SafeProcess.hs  Streaming.hs
src/Polytype/Teletype/: String.hs  Text.hs
src/Polytype/Types/: Time.hs
test/: PtySpec.hs  SanitySpec.hs  SerialSpec.hs  SpecHelper.hs  StdStreamsSpec.hs  TargetSpec.hs  TeletypeSpec.hs
