name:                polytype
version:             0.1.0.0
synopsis:            Polymorphic teletype
description:         Library and tooling for interacting with character devices
homepage:            https://github.com/sorki/polytype
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            System
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

flag examples
  default:
    False
  description:
    Builds example applications

library
  ghc-options:
    -Wall
    -Wunused-packages
    -O2
    -flate-specialise
    -fspecialise-aggressively
  -- -fplugin=Polysemy.Plugin
  -- plugin is not enabled globally
  -- as it causes trouble for some files
  default-extensions:
    DataKinds
    FlexibleContexts
    GADTs
    LambdaCase
    BlockArguments
    PolyKinds
    RecordWildCards
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeOperators
    TypeFamilies
    TemplateHaskell
    NumericUnderscores
    QuantifiedConstraints
    FlexibleInstances
  hs-source-dirs:      src
  exposed-modules:     Polytype
                     , Polytype.Ansi
                     , Polytype.Asciinema
                     , Polytype.Combinators
                     , Polytype.Debug
                     , Polytype.Delay
                     , Polytype.Env
                     , Polytype.Examples.Bash
                     , Polytype.Examples.Echo
                     , Polytype.Examples.HtopAsciinema
                     , Polytype.Examples.IRCBridge
                     , Polytype.Examples.Process
                     , Polytype.Examples.SafeProcess
                     , Polytype.Examples.Streaming
                     , Polytype.Experiments
                     , Polytype.Log
                     , Polytype.Process
                     , Polytype.Pty
                     , Polytype.Race
                     , Polytype.Readline
                     , Polytype.Serial
                     , Polytype.StdStreams
                     , Polytype.Teletype
                     , Polytype.Teletype.String
                     , Polytype.Teletype.Text
                     , Polytype.Test
                     , Polytype.Timeout
                     , Polytype.Types
                     , Polytype.Types.Time
                     , Polytype.Util
                     , Polysemy.Input.Streaming
                     , Polysemy.Output.Streaming
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , aeson
                     , scientific
                     , containers
                     , vector
                     , data-default
                     , text
                     , async
                     , process
                     , polysemy
                     , polysemy-plugin
                     , posix-pty
                     , streaming
                     , serialport
                     , string-conversions
                     , time
                     , haskeline
                     , co-log-core
                     , co-log-polysemy
  default-language:    Haskell2010

executable polytype-htop-demo
  if !flag(examples)
    buildable: False
  hs-source-dirs:      app
  main-is:             HtopDemo.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , polysemy-plugin
                     , polysemy
                     , polytype
                     , optparse-applicative
  default-language:    Haskell2010

test-suite polytype-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SpecHelper
                       PtySpec
                       SerialSpec
                       StdStreamsSpec
                       TeletypeSpec
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , data-default
                     , text
                     , polysemy
                     , polysemy-plugin
                     , polytype
                     , hspec
                     , hspec-discover
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    DataKinds
    TypeApplications
    TypeOperators

source-repository head
  type:     git
  location: https://github.com/sorki/polytype
